fixed scrolling body on mobile

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 :root {
   --primary-color: #38485d;
